Update Pengumpulan Tugas 1 (CV)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="left-column">
       <div class="header">
         <div class="photo">
-            <img src="img/foto_profil.jpg" alt="Foto  
+            <img src="img/foto2.jpg" alt="Foto  
             Profil">
         </div>
         <h1>Jonathan Christian Chandra</h1>
